tests/baselines/reference/ES5SymbolProperty5(target=es2015).errors.txt
ES5SymbolProperty5.ts(1,13): error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: symbol; }'.
ES5SymbolProperty5.ts(7,26): error TS2554: Expected 0 arguments, but got 1.


==== ES5SymbolProperty5.ts (2 errors) ====
    declare var Symbol: { iterator: symbol };
                ~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'Symbol' must be of type 'SymbolConstructor', but here has type '{ iterator: symbol; }'.
!!! related TS6203 lib.es2015.symbol.d.ts:--:--: 'Symbol' was also declared here.
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator](0) // Should error
                             ~
!!! error TS2554: Expected 0 arguments, but got 1.